--- a/index.html
+++ b/index.html
@@ -198,7 +198,9 @@
         <section class="mailchimp-one" id="download">
             <div class="container">
                 <div class="block-title text-center">
-                    <h2 class="block-title__title">تحميل انمي سلاش <br> من خلال متجر التطبيقات او برابط مباشر</h2><!-- /.block-title__title -->
+                    <h2 class="block-title__title">تحميل انمي سلاش <br> من خلال رابط مباشر</h2><!-- /.block-title__title -->
+                    <br>
+                    <h3>ملاحظة : التطبيق لايزال (بيتا) وهذا ليس الإصدار الرسمي</h3>
                 </div><!-- /.block-title -->
                 <div class="mc-form__response text-center">
                            <a class="app_button app_button_small img" href="#" ><img src="assets/images/resources/google-play.png" height="75px" alt="تحميل تطبيق انمي سلاش للأندرويد"></a>
