--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                 <div class="block-title text-center">
                     <h2 class="block-title__title">تحميل انمي سلاش <br> من خلال رابط مباشر</h2><!-- /.block-title__title -->
                     <br>
-                    <h4 class="block-title__title">ملاحظة : التطبيق لايزال (بيتا) وهذا ليس الإصدار الرسمي</h4>
+                    <h5 class="warning">ملاحظة : التطبيق لايزال (بيتا) وهذا ليس الإصدار الرسمي</h5>
                 </div><!-- /.block-title -->
                 <div class="mc-form__response text-center">
                            <a class="app_button app_button_small img" href="#" ><img src="assets/images/resources/google-play.png" height="75px" alt="تحميل تطبيق انمي سلاش للأندرويد"></a>
