--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                     <h5 style="color:white">ملاحظة : التطبيق لايزال (بيتا) وهذا ليس الإصدار الرسمي</h5>
                 </div><!-- /.block-title -->
                 <div class="mc-form__response text-center">
-                           <a class="app_button app_button_small img" href="https://bit.ly/3PARAgn" ><img src="assets/images/resources/google-play.png" height="75px" alt="تحميل تطبيق انمي سلاش للأندرويد"></a>
+                           <a class="app_button app_button_small img" href="https://bit.ly/3NJG7JS" ><img src="assets/images/resources/google-play.png" height="75px" alt="تحميل تطبيق انمي سلاش للأندرويد"></a>
 
                         </div><!-- /.mc-form__response -->
             </div><!-- /.container -->
