--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>تطبيق انمي سلاش - مجتمع لجميع محبي الأنمي</title>
+    <title>انمي سلاش</title>
     <link rel="shortcut icon" href="https://cdn.discordapp.com/attachments/932658931594047540/955555811193651200/anime_4.png">
     <link rel="icon" href="https://cdn.discordapp.com/attachments/932658931594047540/955555811193651200/anime_4.png">
 
@@ -207,8 +207,7 @@
             <div class="container">
                 <div class="block-title text-center">
                     <h2 class="block-title__title">تحميل انمي سلاش <br> من خلال رابط مباشر</h2><!-- /.block-title__title -->
-                    <br>
-                    <h5 style="color:white">ملاحظة : التطبيق لايزال (بيتا) وهذا ليس الإصدار الرسمي</h5>
+                  
                 </div><!-- /.block-title -->
                 <div class="mc-form__response text-center">
                            <a class="app_button app_button_small img" href="https://bit.ly/3NJG7JS" ><img src="assets/images/resources/google-play.png" height="75px" alt="تحميل تطبيق انمي سلاش للأندرويد"></a>
